--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -19,7 +19,7 @@ jobs:
             Library-
 
       - name: Setup Unity
-        uses: game-ci/unity-action@v2
+        uses: game-ci/unity-actions@v2
         with:
           unityVersion: '2021.3.20f1'
 
