--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -10,37 +10,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Cache Library Folder
-        uses: actions/cache@v2
-        with:
-          path: Library
-          key: Library-${{ hashFiles('**/ProjectSettings/ProjectVersion.txt') }}
-          restore-keys: |
-            Library-
-
-      - name: Setup Unity
-        uses: game-ci/unity-actions@v2
-        with:
-          unityVersion: '2021.3.20f1'
-
-      - name: Run Playmode Tests
-        run: unity -runTests -projectPath . -testResults /test-results/playmode-results.xml -testPlatform playmode
-        continue-on-error: false
-
-      - name: Upload Playmode Test Results
-        uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: Playmode Test Results
-          path: /test-results/playmode-results.xml
-
-      - name: Run Editmode Tests
-        run: unity -runTests -projectPath . -testResults /test-results/editmode-results.xml -testPlatform editmode
-        continue-on-error: false
-
-      - name: Upload Editmode Test Results
-        uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: Editmode Test Results
-          path: /test-results/editmode-results.xml
+      - name: Unity - Test runner
+        uses: game-ci/unity-test-runner@v4.1.1
+        
