--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -10,6 +10,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
 
+      - name: copy dir to new dir
+        run: |
+          pwd
+          folderName=$(echo "${PWD##*/}")
+          rsync -r "$GITHUB_WORKSPACE" "copiedProject" 
+          ls -F "copiedProject/$folderName"
+
       - name: Run tests
         uses: game-ci/unity-test-runner@v4.1.1
         env:
@@ -18,6 +25,9 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
+          packageMode: true
+          unityVersion: 2022.3
+          projectPath: ./copiedProject/com.github.aruizrab.sodd-unity-framework
 
   build: 
     needs: test
