--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -4,27 +4,48 @@ on: [pull_request]
 
 jobs:
   test:
-    name: Run Unity Tests
+    name: Test in ${{ matrix.testMode }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        projectPath:
+          - test-package
+        unityVersion: ['2022.3']
+        testMode:
+          - playmode
+          - editmode
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
-
-      - name: copy dir to new dir
+        
+      - name: Copy package to subdeirectory
         run: |
-          pwd
-          folderName=$(echo "${PWD##*/}")
-          rsync -r "$GITHUB_WORKSPACE" "copiedProject" 
-          ls -F "copiedProject/$folderName"
+          rsync -r "$GITHUB_WORKSPACE" "test-package" 
+          ls -F "test-package"
 
-      - name: Run tests
-        uses: game-ci/unity-test-runner@v4.1.1
+      - uses: game-ci/unity-test-runner@v4
+        id: tests
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
           packageMode: true
-          unityVersion: 2022.3
-          projectPath: ./copiedProject/sodd-unity-framework
+          projectPath: ${{ matrix.projectPath }}
+          unityVersion: ${{ matrix.unityVersion }}
+          testMode: ${{ matrix.testMode }}
+          artifactsPath: ${{ matrix.testMode }}-artifacts
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          checkName: ${{ matrix.testMode }} Test Results
+          coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*'
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: Test results for ${{ matrix.testMode }}
+          path: ${{ steps.tests.outputs.artifactsPath }}
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: Coverage results for ${{ matrix.testMode }}
+          path: ${{ steps.tests.outputs.coveragePath }}
