--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -1,51 +1,38 @@
 name: Unity CI
 
-on: [pull_request]
+on: [pull_request, workflow_dispatch]
 
 jobs:
   test:
-    name: Test in ${{ matrix.testMode }}
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        projectPath:
-          - test-package
-        unityVersion: ['2022.3']
-        testMode:
-          - playmode
-          - editmode
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.1.1
-        
-      - name: Copy package to subdeirectory
-        run: |
-          rsync -r "$GITHUB_WORKSPACE" "test-package" 
-          ls -F "test-package"
+      - name: Checkout
+        uses: actions/checkout@v2.4.0
 
-      - uses: game-ci/unity-test-runner@v4
-        id: tests
+      - name: copy dir to new dir
+        run: |
+          pwd
+          folderName=$(echo "${PWD##*/}")
+          rsync -r "$GITHUB_WORKSPACE" "copiedProject" 
+          ls -F "copiedProject/$folderName"
+
+      - name: Run tests
+        id: runTests
+        uses: trudeaua21/unity-test-runner@main
         env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+            UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
-          packageMode: true
-          projectPath: ${{ matrix.projectPath }}
-          unityVersion: ${{ matrix.unityVersion }}
-          testMode: ${{ matrix.testMode }}
-          artifactsPath: ${{ matrix.testMode }}-artifacts
           githubToken: ${{ secrets.GITHUB_TOKEN }}
-          checkName: ${{ matrix.testMode }} Test Results
-          coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*'
-      - uses: actions/upload-artifact@v3
-        if: always()
+          projectPath: ./copiedProject/sodd-unity-framework
+          unityVersion: "2022.3.20f1"
+          testMode: all
+          coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+trudeaua.EasyAccessibility.*,-*Tests*'
+          packageMode: true
+
+      # Upload coverage
+      - name: Upload coverage results
+        uses: actions/upload-artifact@v3
         with:
-          name: Test results for ${{ matrix.testMode }}
-          path: ${{ steps.tests.outputs.artifactsPath }}
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: Coverage results for ${{ matrix.testMode }}
-          path: ${{ steps.tests.outputs.coveragePath }}
+          name: Package Coverage results (all)
+          path: ${{ steps.runTests.outputs.coveragePath }}
+          retention-days: 1
