--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Run tests
         id: runTests
-        uses: trudeaua21/unity-test-runner@main
+        uses: game-ci/unity-test-runner@v4
         env:
             UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
             UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
