--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -6,10 +6,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v2.4.0
 
-      - name: copy dir to new dir
+      - name: Copy project to subfolder
         run: |
           pwd
           folderName=$(echo "${PWD##*/}")
@@ -17,7 +17,7 @@ jobs:
           ls -F "copiedProject/$folderName"
 
       - name: Run tests
-        id: runTests
+        id: tests
         uses: game-ci/unity-test-runner@v4
         env:
             UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
@@ -26,15 +26,21 @@ jobs:
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           projectPath: ./copiedProject/sodd-unity-framework
-          unityVersion: "2023.1.8f1"
+          unityVersion: "2022.3.20f1"
           testMode: all
           coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+trudeaua.EasyAccessibility.*,-*Tests*'
           packageMode: true
 
-      # Upload coverage
-      - name: Upload coverage results
+      - name: Upload test results
         uses: actions/upload-artifact@v3
+        if: always()
         with:
-          name: Package Coverage results (all)
-          path: ${{ steps.runTests.outputs.coveragePath }}
-          retention-days: 1
+          name: Test results
+          path: ${{ steps.tests.outputs.artifactsPath }}
+
+      - name: Upload test coverage
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: Coverage results
+          path: ${{ steps.tests.outputs.coveragePath }}
