--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -2,6 +2,11 @@ name: Unity CI
 
 on: [pull_request, workflow_dispatch]
 
+permissions:
+  checks: write
+  contents: write
+  pull-requests: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
