feat(events): add IEvent interface
This commit adds a new IEvent interface in the sodd-unity-framework package. This interface represents an event that can be listened to and invoked with a type of payload. It provides methods for adding and removing listeners as well as invoking the event with a specific payload.

Signed-off-by: Alex Ruiz <68024691+aruizrab@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,7 @@ $RECYCLE.BIN/
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+
+# Temporary generated diff file for AI-based commit message generation purposes
+.diff
+.diff.meta
