--- a/Tests/Runtime/com.github.aruizrab.sodd-unity-framework.Tests.asmdef
+++ b/Tests/Runtime/com.github.aruizrab.sodd-unity-framework.Tests.asmdef
@@ -1,6 +1,6 @@
 {
   "name": "com.github.aruizrab.sodd-unity-framework.Tests",
-  "rootNamespace": "SODD",
+  "rootNamespace": "SODD.Tests",
   "references": [
     "com.github.aruizrab.sodd-unity-framework"
   ],
