chore(variables): Variables now use GenericEvent class for OnValueChanged events
Variables have been refactored to use the more generalized GenericEvent instead of the custom ValueChangedEvent. Correspondingly, the Variables' method `OnSerializedValueChanged` has been replaced with `HandleValueChange`. This change reduces code redundancy and improves maintainability. Unit tests have also been added to ensure correct functionality of the GenericEvent class.

Signed-off-by: Alex Ruiz <a.ruiz.rabasseda@gmail.com>

--- a/Tests/Editor/com.github.aruizrab.sodd-unity-framework.Editor.Tests.asmdef
+++ b/Tests/Editor/com.github.aruizrab.sodd-unity-framework.Editor.Tests.asmdef
@@ -1,6 +1,6 @@
 {
   "name": "com.github.aruizrab.sodd-unity-framework.Editor.Tests",
-  "rootNamespace": "SODD.Editor.Tests",
+  "rootNamespace": "SODD",
   "references": [
     "com.github.aruizrab.sodd-unity-framework",
     "com.github.aruizrab.sodd-unity-framework.Editor"
