--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           node-version: "lts/*"
 
+      - name: Install dependencies
+        run: npm clean-install
+
       - name: Install semantic-release and plugins
         run: npm install semantic-release @semantic-release/changelog @semantic-release/git
 
