--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,14 +26,8 @@ jobs:
         with:
           node-version: "lts/*"
 
-      - name: Install dependencies
-        run: npm clean-install
-
       - name: Install semantic-release and plugins
-        run: npm install semantic-release @semantic-release/changelog @semantic-release/git
-
-      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
-        run: npm audit signatures
+        run: npm install semantic-release @semantic-release/changelog @semantic-release/git @semantic-release/github
 
       - name: Release
         env:
