--- a/.releaserc
+++ b/.releaserc
@@ -4,6 +4,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    ["@semantic-release/npm", { "npmPublish": false }],
     ["@semantic-release/git", {
       "assets": ["CHANGELOG.md", "package.json"],
       "message": "chore(release): set `package.json` to ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
