feat(ui): add option selector ui component
BREAKING CHANGE: `Unity.TextMeshPro` is now a package dependency

Signed-off-by: Alex Ruiz <a.ruiz.rabasseda@gmail.com>

--- a/Runtime/com.github.aruizrab.sodd-unity-framework.asmdef
+++ b/Runtime/com.github.aruizrab.sodd-unity-framework.asmdef
@@ -2,7 +2,8 @@
     "name": "com.github.aruizrab.sodd-unity-framework",
     "rootNamespace": "SODD",
     "references": [
-        "Unity.InputSystem"
+        "Unity.InputSystem",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
