--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "licensesUrl": "https://github.com/aruizrab/sodd-unity-framework/blob/main/LICENSE",
   "dependencies": {
-    "com.unity.inputsystem": "1.7.0"
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.textmeshpro": "3.0.9"
   }
 }
